# carbonpricingx

./: app.py  guidelines.md  pyproject.toml  readme.md  requirements.txt
.streamlit/: config.toml
carbon_pricing_x/: __init__.py  __main__.py  cli.py  streamlit_app.py
data/: abatement_template.csv  emission_factors.csv  sample_activities.xlsx  sample_departments.csv
data/market/: sample_allowances.csv
modules/: __init__.py  abatement.py  cap_and_trade.py  carbon_pricing.py  emissions_engine.py  excel_parser.py  export_excel.py  export_pdf.py  finance.py  internal_market.py  offset_engine.py  storage.py  utils.py  visualization.py
tests/: test_abatement.py  test_cap_and_trade.py  test_carbon_pricing.py  test_cli.py  test_emissions.py  test_excel_parser.py  test_finance.py  test_internal_market.py  test_offset.py  test_storage.py
